# vibe-code-guardian

./: .gitignore  .gitmodules  .vscodeignore  CHANGELOG.md  Cargo.toml  Claude.md  DEMO-HARD-RESET.md  DEVELOPMENT.md  DUAL_PUBLISHING.md  HARD-RESET-IMPLEMENTATION.md  LICENSE  MANUAL-PUBLISH.md  NOTIFICATION_IMPROVEMENTS.md  PUBLISH-GUIDE.md  PUBLISH-STATUS.md  PUBLISHING-READY.md  README.md  SKILL.md  extension.toml  package-lock.json  package.json  retry-publish.sh  test-file.txt  test-hard-reset-demo.txt  test-publish-flow.sh  test-rollback-demo.sh  test-rollback.ts  test-temp.txt  tsconfig.json
.github/: copilot-instructions.md
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  task_completion.md
docs/: development.md  hard-reset.md  notification-system.md  publishing.md
scripts/: build.sh  test-dual-publish.sh  test-hard-reset.sh  test-publish.sh  test-vsce-auth.sh  verify-git-graph.mjs  verify-hard-reset.sh
src/: aiDetector.ts  blameDecorator.ts  checkpoint.rs  checkpointManager.ts  extension.ts  gitGraphProvider.ts  gitGraphTreeProvider.ts  gitGraphWebview.ts  gitManager.ts  languageConfig.ts  lib.rs  milestoneManager.ts  rollbackManager.ts  stateMonitor.ts  timelineTreeProvider.ts  types.rs  types.ts  verification.ts
src/test/: extension.test.ts
test-plan/: MANUAL_TEST_CASES.md  run-tests.sh
