[package]
name = "vibe-guardian"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src"

[dependencies]
# Note: For development, zed_extension_api will be provided by Zed
# This is a placeholder to allow compilation - the actual API
# is available when installed as a dev extension
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
